--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # yourself editing these this file very often, consider using Jekyll's data files
 # feature for the data you need to update frequently.
 #
-# For technical reasons, this file is *NOT* reloaded automatically when you use
+# For technical reasons, this file is *NOOT* reloaded automatically when you use
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
